--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "http-proxy": "^1.18.1",
+    "proxy": "^1.0.2",
     "redbird": "^0.10.0"
   }
 }
